--- a/.github/workflows/pip_publish.yaml
+++ b/.github/workflows/pip_publish.yaml
@@ -25,5 +25,5 @@ jobs:
 
           release_info=$(curl -H "Authorization: token $GITHUB_TOKEN" -H "Accept: application/vnd.github.v3+json" -s $GITHUB_API_URL)
 
-          python3 -m twine upload  dist/* -u __token__ -p ${PIP_SECRET_KEY}
+          #python3 -m twine upload  dist/* -u __token__ -p ${PIP_SECRET_KEY}
           echo "test"
